--- a/sass/partials/_atoms.scss
+++ b/sass/partials/_atoms.scss
@@ -1,5 +1,16 @@
 // Atoms
 
+
+
+
+// Colors
+.colors div{
+	@extend .padding-10;
+	@extend .text-white;
+}
+
+
+
 // Buttons
 button, .button {
 	@include border-radius(3px);
