--- a/sass/partials/_molecules.scss
+++ b/sass/partials/_molecules.scss
@@ -55,7 +55,7 @@
 	input {
 		border: none;
 		font-size: 1.25em;
-		width: 75%;
+		width: auto;
 		&:focus { box-shadow: none; }
 	}
 	.search-field {
