--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@
 }
 
 /* line 57, ../sass/partials/_utility.scss */
-.padding-10, .dropdown-menu a, input[type=text],
+.padding-10, .colors div, .dropdown-menu a, input[type=text],
 input[type=email],
 input[type=url],
 input[type=password],
@@ -305,7 +305,22 @@ select {
   background: #0076be;
 }
 
+/* line 107, ../sass/partials/_utility.scss */
+.background-blue-75 {
+  background: rgba(0, 118, 190, 0.75);
+}
+
 /* line 108, ../sass/partials/_utility.scss */
+.background-blue-50 {
+  background: rgba(0, 118, 190, 0.5);
+}
+
+/* line 109, ../sass/partials/_utility.scss */
+.background-blue-25 {
+  background: rgba(0, 118, 190, 0.25);
+}
+
+/* line 112, ../sass/partials/_utility.scss */
 .background-red,
 .background-error,
 button.error,
@@ -313,7 +328,7 @@ button.error,
   background: #d51f36;
 }
 
-/* line 111, ../sass/partials/_utility.scss */
+/* line 115, ../sass/partials/_utility.scss */
 .background-orange,
 .background-warning,
 button.warning,
@@ -321,7 +336,22 @@ button.warning,
   background: #ed7612;
 }
 
-/* line 114, ../sass/partials/_utility.scss */
+/* line 117, ../sass/partials/_utility.scss */
+.background-orange-75 {
+  background: rgba(237, 118, 18, 0.75);
+}
+
+/* line 118, ../sass/partials/_utility.scss */
+.background-orange-50 {
+  background: rgba(237, 118, 18, 0.5);
+}
+
+/* line 119, ../sass/partials/_utility.scss */
+.background-orange-25 {
+  background: rgba(237, 118, 18, 0.25);
+}
+
+/* line 121, ../sass/partials/_utility.scss */
 .background-green,
 .background-success,
 button.success,
@@ -329,22 +359,52 @@ button.success,
   background: #aab20a;
 }
 
-/* line 117, ../sass/partials/_utility.scss */
+/* line 123, ../sass/partials/_utility.scss */
+.background-green-75 {
+  background: rgba(170, 178, 10, 0.75);
+}
+
+/* line 124, ../sass/partials/_utility.scss */
+.background-green-50 {
+  background: rgba(170, 178, 10, 0.5);
+}
+
+/* line 125, ../sass/partials/_utility.scss */
+.background-green-25 {
+  background: rgba(170, 178, 10, 0.25);
+}
+
+/* line 127, ../sass/partials/_utility.scss */
 .background-yellow {
   background: #f2b520;
 }
 
-/* line 119, ../sass/partials/_utility.scss */
+/* line 129, ../sass/partials/_utility.scss */
 .background-purple {
   background: #86277f;
 }
 
-/* line 121, ../sass/partials/_utility.scss */
+/* line 130, ../sass/partials/_utility.scss */
+.background-purple-75 {
+  background: rgba(134, 39, 127, 0.75);
+}
+
+/* line 131, ../sass/partials/_utility.scss */
+.background-purple-50 {
+  background: rgba(134, 39, 127, 0.5);
+}
+
+/* line 132, ../sass/partials/_utility.scss */
+.background-purple-25 {
+  background: rgba(134, 39, 127, 0.25);
+}
+
+/* line 134, ../sass/partials/_utility.scss */
 .background-white, button.white, .button.white, button.white:hover, button.white:focus, .button.white:hover, .button.white:focus, html, body, .search-bar .search-field {
   background: #fff;
 }
 
-/* line 123, ../sass/partials/_utility.scss */
+/* line 136, ../sass/partials/_utility.scss */
 .background-platinum,
 .background-subtle,
 hr,
@@ -357,7 +417,7 @@ hr,
   background: #e7e7e7;
 }
 
-/* line 126, ../sass/partials/_utility.scss */
+/* line 139, ../sass/partials/_utility.scss */
 .background-ash,
 .background-disabled,
 button.disabled,
@@ -365,7 +425,7 @@ button.disabled,
   background: #aaa;
 }
 
-/* line 129, ../sass/partials/_utility.scss */
+/* line 142, ../sass/partials/_utility.scss */
 .background-darkgray,
 .background-neutral,
 button.neutral,
@@ -374,57 +434,57 @@ button.neutral,
   background: #333333;
 }
 
-/* line 138, ../sass/partials/_utility.scss */
+/* line 151, ../sass/partials/_utility.scss */
 .text-blue, a {
   color: #0076be;
 }
 
-/* line 140, ../sass/partials/_utility.scss */
+/* line 153, ../sass/partials/_utility.scss */
 .text-red, .card-body.item .item-price,
 .text-error {
   color: #d51f36;
 }
 
-/* line 143, ../sass/partials/_utility.scss */
+/* line 156, ../sass/partials/_utility.scss */
 .text-orange,
 .text-warning {
   color: #ed7612;
 }
 
-/* line 146, ../sass/partials/_utility.scss */
+/* line 159, ../sass/partials/_utility.scss */
 .text-green,
 .text-success {
   color: #aab20a;
 }
 
-/* line 149, ../sass/partials/_utility.scss */
+/* line 162, ../sass/partials/_utility.scss */
 .text-yellow {
   color: #f2b520;
 }
 
-/* line 151, ../sass/partials/_utility.scss */
+/* line 164, ../sass/partials/_utility.scss */
 .text-purple {
   color: #86277f;
 }
 
-/* line 153, ../sass/partials/_utility.scss */
-.text-white, button, .button, button:hover, button:focus, .button:hover, .button:focus, a.white, .card .card-header {
+/* line 166, ../sass/partials/_utility.scss */
+.text-white, .colors div, button, .button, button:hover, button:focus, .button:hover, .button:focus, a.white, .card .card-header {
   color: #fff;
 }
 
-/* line 155, ../sass/partials/_utility.scss */
+/* line 168, ../sass/partials/_utility.scss */
 .text-platinum,
 .text-subtle {
   color: #e7e7e7;
 }
 
-/* line 158, ../sass/partials/_utility.scss */
+/* line 171, ../sass/partials/_utility.scss */
 .text-ash, .card-body.item .item-details, .table-data .data-set .label,
 .text-disabled {
   color: #aaa;
 }
 
-/* line 161, ../sass/partials/_utility.scss */
+/* line 174, ../sass/partials/_utility.scss */
 .text-darkgray,
 .text-neutral,
 body,
@@ -443,17 +503,17 @@ button.white:focus,
   color: #333333;
 }
 
-/* line 170, ../sass/partials/_utility.scss */
+/* line 183, ../sass/partials/_utility.scss */
 .overflow-hidden, .card {
   overflow: hidden;
 }
 
-/* line 171, ../sass/partials/_utility.scss */
+/* line 184, ../sass/partials/_utility.scss */
 .overflow-scroll-x {
   overflow-x: scroll;
 }
 
-/* line 172, ../sass/partials/_utility.scss */
+/* line 185, ../sass/partials/_utility.scss */
 .overflow-scroll-y {
   overflow-y: scroll;
 }
@@ -2820,7 +2880,7 @@ select {
     clear: both;
   }
 }
-/* line 4, ../sass/partials/_atoms.scss */
+/* line 15, ../sass/partials/_atoms.scss */
 button, .button {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -2832,55 +2892,55 @@ button, .button {
   font-size: 16px;
   cursor: pointer;
 }
-/* line 25, ../sass/partials/_atoms.scss */
+/* line 36, ../sass/partials/_atoms.scss */
 button.tiny, .button.tiny {
   font-size: 80%;
 }
-/* line 37, ../sass/partials/_atoms.scss */
+/* line 48, ../sass/partials/_atoms.scss */
 button:hover, button:focus, .button:hover, .button:focus {
   background: #148ad2;
 }
-/* line 44, ../sass/partials/_atoms.scss */
+/* line 55, ../sass/partials/_atoms.scss */
 button.error:hover, button.error:focus, .button.error:hover, .button.error:focus {
   background: #e9334a;
 }
-/* line 49, ../sass/partials/_atoms.scss */
+/* line 60, ../sass/partials/_atoms.scss */
 button.warning:hover, button.warning:focus, .button.warning:hover, .button.warning:focus {
   background: #ff8a26;
 }
-/* line 54, ../sass/partials/_atoms.scss */
+/* line 65, ../sass/partials/_atoms.scss */
 button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
   background: #bec61e;
 }
-/* line 59, ../sass/partials/_atoms.scss */
+/* line 70, ../sass/partials/_atoms.scss */
 button.neutral:hover, button.neutral:focus, .button.neutral:hover, .button.neutral:focus {
   background: #474747;
 }
-/* line 62, ../sass/partials/_atoms.scss */
+/* line 73, ../sass/partials/_atoms.scss */
 button.disabled, .button.disabled {
   cursor: default;
 }
-/* line 68, ../sass/partials/_atoms.scss */
+/* line 79, ../sass/partials/_atoms.scss */
 button.white, .button.white {
   border: 1px solid #aaa;
 }
-/* line 72, ../sass/partials/_atoms.scss */
+/* line 83, ../sass/partials/_atoms.scss */
 button.white:hover, button.white:focus, .button.white:hover, .button.white:focus {
   border: 1px solid #333333;
 }
 
-/* line 86, ../sass/partials/_atoms.scss */
+/* line 97, ../sass/partials/_atoms.scss */
 .button-group {
   padding: 10px 0;
 }
-/* line 88, ../sass/partials/_atoms.scss */
+/* line 99, ../sass/partials/_atoms.scss */
 .button-group button, .button-group .button {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
   margin-right: -6px;
 }
-/* line 91, ../sass/partials/_atoms.scss */
+/* line 102, ../sass/partials/_atoms.scss */
 .button-group button:first-child, .button-group .button:first-child {
   -moz-border-radius-topleft: 3px;
   -webkit-border-top-left-radius: 3px;
@@ -2889,7 +2949,7 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   -webkit-border-bottom-left-radius: 3px;
   border-bottom-left-radius: 3px;
 }
-/* line 92, ../sass/partials/_atoms.scss */
+/* line 103, ../sass/partials/_atoms.scss */
 .button-group button:last-child, .button-group .button:last-child {
   -moz-border-radius-topright: 3px;
   -webkit-border-top-right-radius: 3px;
@@ -2898,17 +2958,17 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   -webkit-border-bottom-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
-/* line 93, ../sass/partials/_atoms.scss */
+/* line 104, ../sass/partials/_atoms.scss */
 .button-group button.white:hover, .button-group button.white:focus, .button-group .button.white:hover, .button-group .button.white:focus {
   border-color: #aaa;
 }
 
-/* line 106, ../sass/partials/_atoms.scss */
+/* line 117, ../sass/partials/_atoms.scss */
 .dropdown {
   position: relative;
 }
 
-/* line 111, ../sass/partials/_atoms.scss */
+/* line 122, ../sass/partials/_atoms.scss */
 .dropdown-menu {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -2927,15 +2987,15 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   min-width: 140px;
   text-align: left;
 }
-/* line 126, ../sass/partials/_atoms.scss */
+/* line 137, ../sass/partials/_atoms.scss */
 .dropdown-menu a {
   border-bottom: 1px solid #e7e7e7;
 }
-/* line 133, ../sass/partials/_atoms.scss */
+/* line 144, ../sass/partials/_atoms.scss */
 .dropdown-menu a.active {
   font-weight: bold;
 }
-/* line 135, ../sass/partials/_atoms.scss */
+/* line 146, ../sass/partials/_atoms.scss */
 .dropdown-menu.small a {
   font-size: 0.8rem;
 }
@@ -3189,7 +3249,7 @@ table {
 .search-bar input {
   border: none;
   font-size: 1.25em;
-  width: 75%;
+  width: auto;
 }
 /* line 59, ../sass/partials/_molecules.scss */
 .search-bar input:focus {
